--- a/CWS.SimpleBank/Views/Shared/_Layout.cshtml
+++ b/CWS.SimpleBank/Views/Shared/_Layout.cshtml
@@ -22,8 +22,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Customers", "GetAll", "Customer")</li>
+                    <li>@Html.ActionLink("Ng", "Index", "Ng")</li>
                 </ul>
             </div>
+            
         </div>
     </div>
     <div class="container body-content">
