--- a/CWS.SimpleBank/Views/Shared/_Layout.cshtml
+++ b/CWS.SimpleBank/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Customers", "GetAll", "Customer")</li>
-                    <li>@Html.ActionLink("Ng", "Index", "Ng")</li>
+                    @*<li>@Html.ActionLink("Customers", "GetAll", "Customer")</li>*@
+                    <li>@Html.ActionLink("Customers", "Index", "Ng")</li>
                 </ul>
             </div>
             
