--- a/CWS.SimpleBank/Views/Shared/_Layout.cshtml
+++ b/CWS.SimpleBank/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     @*<li>@Html.ActionLink("Customers", "GetAll", "Customer")</li>*@
                     <li>@Html.ActionLink("Customers", "Index", "Ng")</li>
+                    <li><a href="/ng/todo-admin">Task Admin</a></li>
                 </ul>
             </div>
             
